--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.2", features = ["derive"] }
+console_engine = "2.6.0"
 crossterm = "0.27.0"
 nalgebra = "0.32.3"
 
